# ray-tracing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
docs/: CMakeLists.txt  Doxyfile
doxygen/: Doxyfile
examples/: CMakeLists.txt  triangle_with_sphere.cc  triangle_with_sphere.cpp
include/: geom.hpp  geometry.hpp  mainDisplayer.hpp  renderer.hpp  rendering.hpp  scene.hpp  utility.hpp
include/geom/: geometry.hpp  line.hpp  mathematics.hpp  point.hpp
include/geometry/: line.hpp  mathematics.hpp  plane.hpp  point.hpp  primitive.hpp  sphere.hpp  transform.hpp  triangle.hpp
include/ray-tracing/: algebra.hpp  application.hpp  bitmap.hpp  camera.hpp  color.hpp  entity.hpp  geometry.hpp  image.hpp  light.hpp  macroses.hpp  object.hpp  object_factory.hpp  placeable.hpp  placeable_mixin.hpp  render.hpp  renderer.hpp  resolution.hpp  scene.hpp  scene_object.hpp  scene_object_manager.hpp  utility.hpp  utils.hpp  window.hpp
include/ray-tracing/algebra/: equation_solver.hpp  transform.hpp
include/ray-tracing/geometry/: equation_solver.hpp  line.hpp  object.hpp  plane.hpp  ray.hpp  sphere.hpp  utils.hpp  (+1 more)
include/rendering/: camera.hpp  mainDisplayer.hpp  renderer.hpp  scene.hpp
scripts/: build.sh  check_syntax.sh  install_cmake.sh
src/: application.cc  application.cpp  camera.cc  image.cc  main.cpp  mainDisplayer.cpp  mathematics.cpp  object_factory.cc  primitives.cpp  renderer.cc  renderer.cpp  scene.cc  scene.cpp  scene_object_manager.cc
src/algebra/: equation_solver.cc
src/geom/: geometry.cpp
src/geometry/: basics.hpp  equation_solver.cc  mathematics.hpp  transform.hpp  triangle.cc  triangle.hpp
src/math/: vector.cc
src/models/: sphere.cc  sphere.cpp  triangle.cc
src/render/: camera.hpp  color.cc  color.hpp  image.cc  render_target.cc  renderer.cc
src/rendering/: camera.cpp  mainDisplayer.cpp  renderer.cpp  scene.cpp
src/scene/: camera.cc  scene.cc
src/window/: window.cc
test/: matrixTest.cpp  testsEntryPoint.cpp
tests/: matrixTest.cpp
(+24 files in other folders)
